# acadoStuff

./: .gitignore  CMakeLists.txt  FindACADO.cmake
code_gen/: codeGenACADO
libs/: lib_models.cpp  lib_models.h  libtestLib_shared.dylib  matplotlibcpp.hpp  testLibFromPY.py  test_lib.cpp  test_lib_vehs.cpp
tests/: code_gen.cpp  kinematic_minT.cpp  main.cpp  single_track.cpp  single_track_XY.cpp  single_track_act_relax_minT.cpp  single_track_actuator.cpp  single_track_jerk_minT.cpp  single_track_jerk_relax_minT.cpp  single_track_minS.cpp  single_track_minT.cpp  single_track_pac_minT.cpp  single_track_pac_relax_minT.cpp  single_track_pacejka_XY.cpp  single_track_vector_ref.cpp
